Remove useless right padding on the logo, which caused some alignments issues on some devices.

--- a/css/debs.css
+++ b/css/debs.css
@@ -10,6 +10,10 @@
     width: 200px;
 }
 
+.navbar-brand {
+    padding-right: 0;
+}
+
 @media (max-width: 767px) {
     #logo {
         padding-top: 15px;
